@@ -5,6 +5,8 @@ changes in sbcl-0.9.6 relative to sbcl-0.9.5:
     (thanks to Svein Ove Aas)
   * bug fix: Unicode symbols are correctly printed in LDB backtraces
     (thanks to David Lichteblau)
+  * bug fix: local bindings shadow global symbol macros for
+    macroexpansion.  (reported by Matthew D Swank on comp.lang.lisp)
   * optimization: non-open coded uses of numeric comparison operators
     (e.g. >) no longer cons when called with more than one parameter
     on platforms supporting dynamic-extent allocation.
